<resources>
    <string name="app_name">Loan Guide Admin</string>
    <string name="upload_news">Upload News</string>
    <string name="upload_strip_banner">Update Banner</string>
    <string name="upload_tips">Upload Tips</string>
    <string name="update_ads_ids">Update Ads Ids</string>
    <string name="enter_description">Enter English Description</string>
    <string name="enter_description1">Enter Hindi Description</string>
    <string name="enter_title">Enter Hindi Title</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="edit_data">Edit Data</string>
    <string name="update_news">Update News</string>
    <string name="update_tips">update Tips</string>
    <string name="update_strip_banner">Update Strip banner</string>
    <string name="admob_app_key">Admob App Key</string>
    <string name="ironsource_app_key">AppLovin App Key</string>
    <string name="app_open_id">App Open Id</string>
    <string name="admob_banner_id">Admob Banner Id</string>
    <string name="native_ads_id">Native Ads Id</string>
    <string name="banner">Banner</string>
    <string name="interstitial">Interstitial</string>
    <string name="network_name">Network Name</string>
    <string name="ad_attribution">AD</string>
    <string name="upload_loan_app_data">Upload Loan App Data</string>
    <string name="personal_loan">Personal Loan</string>
    <string name="bank_loan">Bank Loan</string>
    <string name="business_loan">Business Loan</string>
    <string name="home_loan">Home Loan</string>
    <string name="update_urls">Update Urls</string>
    <string name="aadhar_loan">Aadhar Loan</string>
    <string name="student_loan">Student Loan</string>
    <string name="enter_interest_rate">Enter Interest rate</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_requirement">Enter Requirement</string>
    <string name="enter_url">Enter Url</string>
    <string name="show_loan_app_data">Show Loan App Data</string>
    <string name="show_user_data">Show User Data</string>
    <string name="native_ads_type">Native Ads Type</string>
    <string name="enter_english_title">Enter English Title</string>
    <string name="upload_own_title_amp_url"><![CDATA[Upload Own Title & Url]]></string>
    <string name="update_own_title_amp_url"><![CDATA[Update Own Title & Url]]></string>

</resources>