<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/black"
            android:elevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ok_btn"
                app:layout_constraintStart_toEndOf="@+id/back_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ok_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_check_circle_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/admob_app_key"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/admobKey"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:textColor="@color/black"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_textInputLayout2"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/ironsource_app_key"
                        android:textColorHint="@color/black"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                        tools:layout_editor_absoluteX="8dp">

                        <EditText
                            android:id="@+id/appLovin_app_key"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_textInputLayout3"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/app_open_id"
                        android:textColorHint="@color/black"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_textInputLayout2">

                        <EditText
                            android:id="@+id/app_open_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_textInputLayout4"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/admob_banner_id"
                        android:textColorHint="@color/black"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_textInputLayout3">

                        <EditText
                            android:id="@+id/admob_banner_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_textInputLayout5"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/native_ads_id"
                        android:textColorHint="@color/black"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_textInputLayout4">

                        <EditText
                            android:id="@+id/native_ads_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_textInputLayout6"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/banner"
                        android:textColorHint="@color/black"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_textInputLayout5">

                        <EditText
                            android:id="@+id/banner_ads_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_textInputLayout7"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/interstitial"
                        android:textColorHint="@color/black"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="clear_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_textInputLayout6">

                        <EditText
                            android:id="@+id/interstitial_ads_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_textInputLayout8"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:hint="@string/network_name"
                        android:textColorHint="@color/black"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/black"
                        app:endIconMode="dropdown_menu"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_textInputLayout7">

                        <AutoCompleteTextView
                            android:id="@+id/networkName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15dp"
                            android:textColor="@color/black"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>